src/objects/syukkin__c.object
<CustomObject>
    <description>インターブレインズ用</description>
    <fields>
        <fullName>gaichu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>登録外注</label>
        <referenceTo>gaichu__c</referenceTo>
        <relationshipLabel>出金</relationshipLabel>
        <relationshipName>aT1g</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>memo__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mitorokugaichu__c</fullName>
        <label>未登録外注先名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>syukkinbi__c</fullName>
        <label>出金日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>syukkingaku__c</fullName>
        <label>出金額（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>syukkinhouhou__c</fullName>
        <label>出金方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>振込</fullName>
                </value>
                <value>
                    <fullName>小切手</fullName>
                </value>
                <value>
                    <fullName>手形</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>syukkinsaki__c</fullName>
        <label>出金先区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>登録外注</fullName>
                </value>
                <value>
                    <fullName>未登録外注</fullName>
                </value>
                <value>
                    <fullName>社員</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tegatamanki__c</fullName>
        <label>手形満期日</label>
        <type>Date</type>
    </fields>
    <label>出金</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_syukkin</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>出金№</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>